--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     That`s my CV (in progress)
+    link to my Markdown CV:
+    https://4elovekov.github.io/rsschool-cv/cv
 </body>
 </html>
