fix: fix link again

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     That`s my CV (in progress)
     link to my Markdown CV:
-    <a>https://4elovekov.github.io/rsschool-cv/cv</a>
+    <a href="https://4elovekov.github.io/rsschool-cv/cv">Markdown CV</a>
 </body>
 </html>
